# metacognition

./: mise.toml
backend/: .pre-commit-config.yaml  pyproject.toml
frontend/: .prettierignore  eslint.config.mjs  next.config.ts  package.json  prettier.config.mjs
frontend/.husky/: pre-commit  pre-push
frontend/src-tauri/: tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/tutorial/: page.tsx
frontend/src/components/layout/: action-bar.tsx  app-shell.tsx  header-bar.tsx  header-container.tsx  two-column.tsx
frontend/src/components/navigation/: confirm-navigate-button.tsx
frontend/src/components/page-views/: analog-explanation-client.tsx  analog-question-client.tsx  analog-reflection-client.tsx  metacog-feedback-client.tsx  passage-question-client.tsx  training-explanation-client.tsx  training-question-client.tsx  training-reflection-client.tsx  training-reflection1-view.tsx
frontend/src/components/passage/: paragraph-numbers.ts  passage-body.tsx  passage-section-ad-chain-border.tsx  passage-section-ad.tsx  passage-section-article.tsx  passage-section-certificate.tsx  passage-section-chat-tablet.tsx  passage-section-conference-schedule.tsx  passage-section-customer-reviews.tsx  passage-section-customer-service-exchange.tsx  passage-section-email-form.tsx  passage-section-email-table.tsx  passage-section-invoice.tsx  passage-section-letter.tsx  (+11 more)
frontend/src/lib/: capture.ts  coordinate-collector.ts  eyetracker.ts  logger.ts  mock-data.ts  store.ts  tauri-log-bridge.ts  text-underline.tsx  types.ts
(+30 files in other folders)
